[metadata]
name = tutorenvs
author = Christopher J. MacLellan
author-email = christopher.maclellan@drexel.edu
summary = Headless tutor environments for training simulated students.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://gitlab.cci.drexel.edu/teachable-ai-lab/fractionenv
project_urls =
    Documentation = https://gitlab.cci.drexel.edu/teachable-ai-lab/fractionenv
    Source Code = https://gitlab.cci.drexel.edu/teachable-ai-lab/fractionenv
license = LICENSE
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    tutorenvs

[bdist_wheel]
universal=1

[aliases]
test=pytest
